src/interpreter/QplplParser.java
// Generated from /home/diogo/Downloads/QPP1-master/src/interpreter/Qplpl.g4 by ANTLR 4.7.2
package interpreter;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QplplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		INTL=46, CHARL=47, STRL=48, BOOLL=49, ID=50, COMMENTBLOCK=51, COMMENTLINE=52, 
		WS=53;
	public static final int
		RULE_programa = 0, RULE_definicao = 1, RULE_estrutura = 2, RULE_estruturaAcesso = 3, 
		RULE_listMembro = 4, RULE_atributo = 5, RULE_variavel = 6, RULE_construtor = 7, 
		RULE_metodo = 8, RULE_func = 9, RULE_parametros_formais = 10, RULE_tipo = 11, 
		RULE_nome = 12, RULE_parametros_reais = 13, RULE_qualificador = 14, RULE_comando = 15, 
		RULE_bloco = 16, RULE_selecao = 17, RULE_repeticao = 18, RULE_atribuicao = 19, 
		RULE_retorno = 20, RULE_entrada = 21, RULE_saida = 22, RULE_expressao = 23, 
		RULE_literal = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "definicao", "estrutura", "estruturaAcesso", "listMembro", 
			"atributo", "variavel", "construtor", "metodo", "func", "parametros_formais", 
			"tipo", "nome", "parametros_reais", "qualificador", "comando", "bloco", 
			"selecao", "repeticao", "atribuicao", "retorno", "entrada", "saida", 
			"expressao", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "'}'", "'public'", "':'", "'private'", "'protected'", 
			"';'", "'='", "'('", "')'", "'void'", "','", "'int'", "'char'", "'bool'", 
			"'string'", "'.'", "'const'", "'static'", "'break'", "'if'", "'else '", 
			"'while'", "'return'", "'std::cin'", "'>>'", "'std::cout'", "'<<'", "'+'", 
			"'-'", "'++'", "'--'", "'!'", "'%'", "'*'", "'/'", "'<'", "'<='", "'>'", 
			"'>='", "'=='", "'!='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "INTL", "CHARL", 
			"STRL", "BOOLL", "ID", "COMMENTBLOCK", "COMMENTLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Qplpl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QplplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(QplplParser.EOF, 0); }
		public List<DefinicaoContext> definicao() {
			return getRuleContexts(DefinicaoContext.class);
		}
		public DefinicaoContext definicao(int i) {
			return getRuleContext(DefinicaoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << ID))) != 0)) {
				{
				{
				setState(50);
				definicao();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicaoContext extends ParserRuleContext {
		public DefinicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicao; }
	 
		public DefinicaoContext() { }
		public void copyFrom(DefinicaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefinicaoFuncaoContext extends DefinicaoContext {
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public DefinicaoFuncaoContext(DefinicaoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitDefinicaoFuncao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefinicaoVariavelContext extends DefinicaoContext {
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public DefinicaoVariavelContext(DefinicaoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitDefinicaoVariavel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefinicaoEstruturaContext extends DefinicaoContext {
		public EstruturaContext estrutura() {
			return getRuleContext(EstruturaContext.class,0);
		}
		public DefinicaoEstruturaContext(DefinicaoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitDefinicaoEstrutura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicaoContext definicao() throws RecognitionException {
		DefinicaoContext _localctx = new DefinicaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definicao);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new DefinicaoFuncaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				func();
				}
				break;
			case 2:
				_localctx = new DefinicaoEstruturaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				estrutura();
				}
				break;
			case 3:
				_localctx = new DefinicaoVariavelContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				variavel();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstruturaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QplplParser.ID, 0); }
		public List<EstruturaAcessoContext> estruturaAcesso() {
			return getRuleContexts(EstruturaAcessoContext.class);
		}
		public EstruturaAcessoContext estruturaAcesso(int i) {
			return getRuleContext(EstruturaAcessoContext.class,i);
		}
		public EstruturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estrutura; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitEstrutura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EstruturaContext estrutura() throws RecognitionException {
		EstruturaContext _localctx = new EstruturaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_estrutura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__0);
			setState(64);
			match(ID);
			setState(65);
			match(T__1);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__5) | (1L << T__6))) != 0)) {
				{
				{
				setState(66);
				estruturaAcesso();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstruturaAcessoContext extends ParserRuleContext {
		public EstruturaAcessoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estruturaAcesso; }
	 
		public EstruturaAcessoContext() { }
		public void copyFrom(EstruturaAcessoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EstrutPrivateContext extends EstruturaAcessoContext {
		public List<ListMembroContext> listMembro() {
			return getRuleContexts(ListMembroContext.class);
		}
		public ListMembroContext listMembro(int i) {
			return getRuleContext(ListMembroContext.class,i);
		}
		public EstrutPrivateContext(EstruturaAcessoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitEstrutPrivate(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EstrutPublicContext extends EstruturaAcessoContext {
		public List<ListMembroContext> listMembro() {
			return getRuleContexts(ListMembroContext.class);
		}
		public ListMembroContext listMembro(int i) {
			return getRuleContext(ListMembroContext.class,i);
		}
		public EstrutPublicContext(EstruturaAcessoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitEstrutPublic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EstrutProtectedContext extends EstruturaAcessoContext {
		public List<ListMembroContext> listMembro() {
			return getRuleContexts(ListMembroContext.class);
		}
		public ListMembroContext listMembro(int i) {
			return getRuleContext(ListMembroContext.class,i);
		}
		public EstrutProtectedContext(EstruturaAcessoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitEstrutProtected(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EstruturaAcessoContext estruturaAcesso() throws RecognitionException {
		EstruturaAcessoContext _localctx = new EstruturaAcessoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_estruturaAcesso);
		int _la;
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				_localctx = new EstrutPublicContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(T__3);
				setState(75);
				match(T__4);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__19) | (1L << ID))) != 0)) {
					{
					{
					setState(76);
					listMembro();
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__5:
				_localctx = new EstrutPrivateContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(T__5);
				setState(83);
				match(T__4);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__19) | (1L << ID))) != 0)) {
					{
					{
					setState(84);
					listMembro();
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__6:
				_localctx = new EstrutProtectedContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				match(T__6);
				setState(91);
				match(T__4);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__19) | (1L << ID))) != 0)) {
					{
					{
					setState(92);
					listMembro();
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListMembroContext extends ParserRuleContext {
		public ListMembroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listMembro; }
	 
		public ListMembroContext() { }
		public void copyFrom(ListMembroContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MembroConstrutorContext extends ListMembroContext {
		public ConstrutorContext construtor() {
			return getRuleContext(ConstrutorContext.class,0);
		}
		public MembroConstrutorContext(ListMembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitMembroConstrutor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MembroMetodoContext extends ListMembroContext {
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public MembroMetodoContext(ListMembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitMembroMetodo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MembroATributoContext extends ListMembroContext {
		public AtributoContext atributo() {
			return getRuleContext(AtributoContext.class,0);
		}
		public MembroATributoContext(ListMembroContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitMembroATributo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListMembroContext listMembro() throws RecognitionException {
		ListMembroContext _localctx = new ListMembroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listMembro);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new MembroConstrutorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				construtor();
				}
				break;
			case 2:
				_localctx = new MembroATributoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				atributo();
				}
				break;
			case 3:
				_localctx = new MembroMetodoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				metodo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributoContext extends ParserRuleContext {
		public QualificadorContext qualificador() {
			return getRuleContext(QualificadorContext.class,0);
		}
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public AtributoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitAtributo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtributoContext atributo() throws RecognitionException {
		AtributoContext _localctx = new AtributoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atributo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			qualificador();
			setState(106);
			variavel();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariavelContext extends ParserRuleContext {
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
	 
		public VariavelContext() { }
		public void copyFrom(VariavelContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IniciaVariavelVaziaContext extends VariavelContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(QplplParser.ID, 0); }
		public IniciaVariavelVaziaContext(VariavelContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitIniciaVariavelVazia(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IniciaVariavelComValorContext extends VariavelContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(QplplParser.ID, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public IniciaVariavelComValorContext(VariavelContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitIniciaVariavelComValor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variavel);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new IniciaVariavelVaziaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				tipo();
				setState(109);
				match(ID);
				setState(110);
				match(T__7);
				}
				break;
			case 2:
				_localctx = new IniciaVariavelComValorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				tipo();
				setState(113);
				match(ID);
				setState(114);
				match(T__8);
				setState(115);
				expressao(0);
				setState(116);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrutorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QplplParser.ID, 0); }
		public Parametros_formaisContext parametros_formais() {
			return getRuleContext(Parametros_formaisContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ConstrutorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construtor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitConstrutor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstrutorContext construtor() throws RecognitionException {
		ConstrutorContext _localctx = new ConstrutorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_construtor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(ID);
			setState(121);
			match(T__1);
			setState(122);
			parametros_formais();
			setState(123);
			match(T__2);
			setState(124);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetodoContext extends ParserRuleContext {
		public QualificadorContext qualificador() {
			return getRuleContext(QualificadorContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public MetodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metodo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitMetodo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetodoContext metodo() throws RecognitionException {
		MetodoContext _localctx = new MetodoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_metodo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			qualificador();
			setState(127);
			func();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
	 
		public FuncContext() { }
		public void copyFrom(FuncContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FuncaoComTipoContext extends FuncContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(QplplParser.ID, 0); }
		public Parametros_formaisContext parametros_formais() {
			return getRuleContext(Parametros_formaisContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public FuncaoComTipoContext(FuncContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitFuncaoComTipo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncaoComVoidContext extends FuncContext {
		public TerminalNode ID() { return getToken(QplplParser.ID, 0); }
		public Parametros_formaisContext parametros_formais() {
			return getRuleContext(Parametros_formaisContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public FuncaoComVoidContext(FuncContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitFuncaoComVoid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_func);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case ID:
				_localctx = new FuncaoComTipoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				tipo();
				setState(130);
				match(ID);
				setState(131);
				match(T__9);
				setState(132);
				parametros_formais();
				setState(133);
				match(T__10);
				setState(134);
				bloco();
				}
				break;
			case T__11:
				_localctx = new FuncaoComVoidContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(T__11);
				setState(137);
				match(ID);
				setState(138);
				match(T__9);
				setState(139);
				parametros_formais();
				setState(140);
				match(T__10);
				setState(141);
				bloco();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parametros_formaisContext extends ParserRuleContext {
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(QplplParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(QplplParser.ID, i);
		}
		public Parametros_formaisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros_formais; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QplplVisitor ) return ((QplplVisitor<? extends T>)visitor).visitParametros_formais(this);
			else return visitor.visitChildren(this);
		}
	}
